# funksteckdosen-rest-rs

./: Cargo.toml  README.md  funksteckdosen-rest-rs.service
.github/workflows/: rust.yml
src/: main.rs
